# volt-edge-2.0

./: .env.example  .gitignore  AGENTIC_PLAN.md  ISSUES  README.md
backend/: pyproject.toml
backend/app/: agent.py  config.py  db.py  events.py  layout.py  main.py  models.py  routes.py  schemas.py  sessions.py  workspace.py
backend/tests/: conftest.py  test_agent_permissions.py  test_events_history.py  test_layout.py  test_manual_edits.py  test_part_review.py  test_placement.py  test_projects_crud.py  test_scaffold_errors.py  test_scaffold_fast.py
component-kb/: AUTHORING.md  SKILL.md
component-kb/parts/: esp32-c3-supermini.md  mpu6050-gy521.tsx  stm32-bluepill.tsx
data/: volt-edge.db
deploy/: ngrok-policy.example.yml
docs/: MODEL_AND_DATACARD.md  NGROK_DEPLOY.md  PACKAGES.md  PHASE0_RESULTS.md  PLAN.md  PROJECT_REPORT.md  REPORT.md  SPEC.md  TASKS.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Chat.tsx  api.ts  index.css  main.tsx
scripts/: md_to_pdf.py  md_to_pdf_selectable.py  serve-public.mjs  start-ngrok.sh
skill/: WORKFLOW.md
skill/scripts/: verify_part.mjs  verify_part.test.mjs
workspaces/.template/: package.json
workspaces/10acdd33468b/: index.circuit.tsx  package.json
workspaces/17bad71e588b/: index.circuit.tsx  package.json
workspaces/3bc271e455f4/: index.circuit.tsx  package.json
workspaces/432b4a5efad4/: index.circuit.tsx  package.json
workspaces/6b932717bb97/: index.circuit.tsx  package.json
workspaces/d4a94d5900ad/: index.circuit.tsx  package.json
(+52 files in other folders)
