[project]
name = "voltedge-backend"
version = "0.1.0"
description = "VoltEdge agentic circuit design backend"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.2.110",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "pydantic",
    "pydantic-settings",
    "sqlmodel",
    "anyio",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
